<resources>
    <string name="app_name">Mini_projekt_5</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="web">WEB</string>
    <string name="change_image">Change Image</string>
    <string name="image_of_doggo">Image of doggo</string>
    <string name="shop_list">Shop List</string>
    <string name="start_music">Start music</string>
    <string name="stop">Stop</string>
    <string name="next_track">Next track</string>
</resources>
