<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="146dp"
        android:contentDescription="@string/image_of_doggo"
        android:src="@drawable/doggo1" />

    <Button
        android:id="@+id/web_button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/web" />

    <Button
        android:id="@+id/change_img_button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/change_image" />

    <Button
        android:id="@+id/button_shop_list"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/shop_list" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/start_music" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:text="@string/next_track" />

</LinearLayout>